@@ -1,3 +1,14 @@
+2013-01-30  Zeno Albisser  <zeno@webkit.org>
+
+        [Qt] Fix Qt/Mac build after r141024 and r141037
+        https://bugs.webkit.org/show_bug.cgi?id=108318
+
+        Reviewed by Kentaro Hara.
+
+        * wtf/Functional.h:
+            Make sure Block.h is included and its functionality
+            is enabled for Qt on Mac.
+
 2013-01-30  Simon Hausmann  <simon.hausmann@digia.com>
 
         [Qt] Remove QT4_UNICODE related code paths
